--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.2",
-    "sweetalert2": "^11.19.1",
+    "sweetalert2": "^11.21.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
